# flower

examples/quickstart-cpp/: .gitignore  CMakeLists.txt  README.md  client.py  fedavg_cpp.py  pyproject.toml  server.py  test_fedavg_cpp.py
examples/quickstart-cpp/include/: message_handler.h  recorddict_serde.h  supernode_client.h
examples/quickstart-cpp/src/: main.cc  message_handler.cc  recorddict_serde.cc  simple_client.cc  supernode_client.cc
